--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-BASE_URL=http://localhost:8080
+BASE_URL=http://localhost:8085
 DRUPAL_USERNAME=admin
 DRUPAL_PASSWORD=admin
 DRUPAL_USERNAME1=ContentEditor
+DRUPAL_PASSWORD1=monaqc123*Test
+DRUPAL_USERNAME1=mona77
 DRUPAL_PASSWORD1=monaqc123*Test
